2003-03-06  Don Porter  <dgp@users.sourceforge.net>

        * generic/TclUtf.c (Tcl_UniCharNcasecmp):       Corrected failure to
        * tests/utf.test (utf-25.*):    properly compare Unicode strings of
        different case in a case insensitive manner.  [Bug 699042]

2003-03-06  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclCompCmds.c (TclCompileSwitchCmd):
	Replaced a non-portable 'bzero' with a portable 'memset'.
	[Bug 698442].
	
2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tclIO.c (Tcl_Seek, Tcl_OutputBuffered):
	If there is data buffered in the statePtr->curOutPtr
	member then set the BUFFER_READY flag in Tcl_Seek.
	This is needed so that the next call to FlushChannel
	will write any buffered bytes before doing the seek.
	The existing code would set the BUFFER_READY flag
	inside the Tcl_OutputBuffered function. This was a
	programming error made when Tcl_OutputBuffered
	was originally created in CVS revision 1.35. The
	setting of the BUFFER_READY flag should not have
	been included in the Tcl_OutputBuffered function.
	* generic/tclTest.c (TestChannelCmd): Use the
	Tcl_InputBuffered and Tcl_OutputBuffered
	util methods to query the amount of buffered
	input and output.

2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tclIO.c (Tcl_Flush): Compare the
	nextAdded member of the ChannelBuffer to the
	nextRemoved member to determine if any output
	has been buffered. The previous check against
	the value 0 seems to have just been a coding
	error. See other methods like Tcl_OutputBuffered
	for examples where nextAdded is compared to
	nextRemoved to find the number of bytes buffered.

2003-03-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tclIO.c (Tcl_GetsObj): Check that
	the eol pointer has not gone past the end
	of the string when in auto translation
	mode and the INPUT_SAW_CR flag is set.
	The previous code worked because the
	end of string value \0 was being compared